// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CustomizedLabel ENCOURA theme matches the snapshot 1`] = `
<div>
  <foreignobject
    height="30"
    requiredfeatures="http://www.w3.org/TR/SVG11/feature#Extensibility"
    text-anchor="middle"
    width="36"
    x="152"
    y="147"
  >
    <div
      aria-label="Test"
      class="css-8j61u7-DlsScatterPlot-scatterLabels"
      data-mui-internal-clone-element="true"
      opacity="1"
    >
      Test
    </div>
  </foreignobject>
</div>
`;

exports[`CustomizedLabel ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <foreignobject
    height="30"
    requiredfeatures="http://www.w3.org/TR/SVG11/feature#Extensibility"
    text-anchor="middle"
    width="36"
    x="152"
    y="147"
  >
    <div
      aria-label="Test"
      class="css-8j61u7-DlsScatterPlot-scatterLabels"
      data-mui-internal-clone-element="true"
      opacity="1"
    >
      Test
    </div>
  </foreignobject>
</div>
`;

exports[`CustomizedLabel ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <foreignobject
    height="30"
    requiredfeatures="http://www.w3.org/TR/SVG11/feature#Extensibility"
    text-anchor="middle"
    width="36"
    x="152"
    y="147"
  >
    <div
      aria-label="Test"
      class="css-1ulfqjm-DlsScatterPlot-scatterLabels"
      data-mui-internal-clone-element="true"
      opacity="1"
    >
      Test
    </div>
  </foreignobject>
</div>
`;

exports[`CustomizedLabel ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <foreignobject
    height="30"
    requiredfeatures="http://www.w3.org/TR/SVG11/feature#Extensibility"
    text-anchor="middle"
    width="36"
    x="152"
    y="147"
  >
    <div
      aria-label="Test"
      class="css-1ulfqjm-DlsScatterPlot-scatterLabels"
      data-mui-internal-clone-element="true"
      opacity="1"
    >
      Test
    </div>
  </foreignobject>
</div>
`;
